Решение проблемы с наведением на +\- в модальном окне

--- a/catalog.html
+++ b/catalog.html
@@ -96,14 +96,14 @@
             <fieldset class="filter accomodation-type">
               <legend class="filter-header">Тип жилья:</legend>
               <label class="filter-item">
-                <input class="input-radio" type="radio" name="hotel" id="hotel-radio" checked value="hotel">Гостиница</span>
+                <input class="input-radio" type="radio" name="hotel" id="hotel-radio" checked value="hotel">Гостиница
                   </label>
               <label class="filter-item">
-                <input class="input-radio" type="radio" name="motel" id="motel-radio" value="motel">Мотель</span>
+                <input class="input-radio" type="radio" name="motel" id="motel-radio" value="motel">Мотель
                 </label>
               <label class="filter-item">
                 <input class="input-radio" type="radio" name="appartments"
-                id="appartments-radio" value="appartments">Апартаменты</span>
+                id="appartments-radio" value="appartments">Апартаменты
                 </label>
             </fieldset>
             <fieldset class="filter filter-price">
