--- a/modal.html
+++ b/modal.html
@@ -43,7 +43,7 @@
             </li>
             <li class="navigation-item-button">
               <a class="navigation-link-favourite" href="#">
-                <svg aria-hidden="true" и focusable="false" xmlns="http://www.w3.org/2000/svg" width="18" height="17"
+                <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18" height="17"
                   fill="none">
                   <path fill="#000"
                     d="M8.9 17a.9.9 0 0 1-.8-.4l-7-7.9A5.4 5.4 0 0 1 5.5 0C6.8 0 8 .5 9 1.3a5.5 5.5 0 0 1 9 4.1c0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5L9 14.4l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4a3.7 3.7 0 0 0-2.7-1.3 3.3 3.3 0 0 0-3.3 3.3c-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z" />
@@ -66,8 +66,8 @@
 
         <section class="hero">
           <h1 class="visually-hidden"> Добро пожаловать в Седону</h1>
-          <img class="background-img" src="images/welcometext.svg" alt="Надоел Гранд каньон - Добро пожаловать в Седону."
-            width="458" height="352">
+          <img class="background-img" src="images/welcometext.svg"
+            alt="Надоел Гранд каньон - Добро пожаловать в Седону." width="458" height="352">
         </section>
 
         <!-- Advantages -->
@@ -161,7 +161,8 @@
           <h2 class="subsc-header"> Подпишитесь на рассылку</h2>
           <p class="subsc-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-            <input class="text-input-field" type="text" name="index-email" placeholder="Ваш e-mail" id="index-email-field">
+            <input class="text-input-field" type="text" name="index-email" placeholder="Ваш e-mail"
+              id="index-email-field">
             <button class="button subsc-button" type="submit">Подписаться</button>
           </form>
         </div>
@@ -234,49 +235,49 @@
               <span class="check-out-text">На эти даты есть свободные номера. Пока есть.</span>
             </label>
             <div class="count-container">
-              <label class="adult people-count">
-                <span class="adult-count-header count-header">Взрослые:</span>
-                <div class="count-block">
-                  <button class="count-minus" type="button">
-                    <svg class="minus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
-                      width="20" height="20" fill="#756157" viewBox="0 0 20 20"> <path d="M3 9v2h14V9H3Z"/></svg>
-                  </button>
-                  <input type="number" class="people-number" id="adult-number" value="2" name="adult-number" min="1"
-                    max="10">
-                  <button class="count-plus" type="button">
-                    <svg class="plus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
-                      width="14" height="14" fill="#756157" viewBox="0 0 14 14">
-                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z"/>
-                    </svg>
-                  </button>
-                </div>
-              </label>
-              <label class="child people-count">
-                <span class="children-count-header count-header">Дети:</span>
-                <span class="tooltip">
-                  <button type="button" class="tooltip-toggle"></button>
-                  <span class="tooltip-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18
-                    лет. Дети до 6 лет размещаются бесплатно.</span>
-                </span>
-                <div class="count-block">
-                  <button class="count-minus" type="button">
-                    <svg class="minus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
-                      width="20" height="20" fill="#756157" viewBox="0 0 20 20"> <path d="M3 9v2h14V9H3Z" /></svg>
-                  </button>
-                  <input type="number" class="people-number" id="child-number" value="2" name="child-number" min="1"
-                    max="10">
-                  <button class="count-plus" type="button">
-                    <svg class="plus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
-                      width="14" height="14" fill="#756157" viewBox="0 0 14 14">
-                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
-                    </svg>
-                  </button>
-                </div>
-              </label>
+              <label class="adult people-count" for="adult-number">Взрослые:</label>
+              <button class="count-minus" type="button">
+                <svg class="minus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                  width="20" height="20" fill="#756157" viewBox="0 0 20 20">
+                  <path d="M3 9v2h14V9H3Z" />
+                </svg>
+                <span class="visually-hidden">Кнопка уменьшения колличества детей</span>
+              </button>
+              <input type="number" class="persons-number" id="adult-number" value="2" name="child-number" min="1"
+                max="10">
+              <button class="count-plus" type="button">
+                <svg class="plus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                  width="14" height="14" fill="#756157" viewBox="0 0 14 14">
+                  <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                </svg>
+                <span class="visually-hidden">Кнопка увеличения колличества детей</span>
+              </button>
+              <label class="child people-count" for="child-number">Дети:</label>
+              <span class="tooltip">
+                <button type="button" class="tooltip-toggle"></button>
+                <span class="tooltip-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18
+                  лет. Дети до 6 лет размещаются бесплатно.</span>
+              </span>
+              <button class="count-minus" type="button">
+                <svg class="minus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                  width="20" height="20" fill="#756157" viewBox="0 0 20 20">
+                  <path d="M3 9v2h14V9H3Z" />
+                </svg>
+                <span class="visually-hidden">Кнопка уменьшения колличества детей</span>
+              </button>
+              <input type="number" class="persons-number" id="child-number" value="2" name="child-number" min="1"
+                max="10">
+              <button class="count-plus" type="button">
+                <svg class="plus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                  width="14" height="14" fill="#756157" viewBox="0 0 14 14">
+                  <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                </svg>
+                <span class="visually-hidden">Кнопка увеличения колличества детей</span>
+              </button>
             </div>
             <button type="button" class="modal-search-button">Найти</button>
+          </form>
         </div>
-        </form>
       </section>
     </div>
   </body>
