--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>City of Sedona</title>
     <link href="css/style.css" rel="stylesheet">
     <link href="favicon.ico" rel="icon">
-    <link href="images/decor/favicon.png" type="image/png" rel="icon">
+    <link href="images/favicon/favicon.png" type="image/png" rel="icon">
   </head>
 
   <body>
@@ -14,7 +15,7 @@
     <!-- Header -->
 
     <div class="body-container">
-      <header class="main-header">
+      <header class="main-header" data-test="header">
         <nav class="navigation">
           <a class="navigation-logo">
             <img src="images/sedonalogo.svg" width="140" height="70" alt="Логотип сайта Седона." >
@@ -60,11 +61,11 @@
           </ul>
         </nav>
       </header>
-      <main class="main">
+      <main class="main" data-test="main">
 
         <!-- Hero -->
 
-        <section class="hero">
+        <section class="hero" data-test="hero">
           <h1 class="visually-hidden"> Добро пожаловать в Седону</h1>
           <img class="background-img" src="images/welcometext.svg"
             width="458" height="352" alt="Надоел Гранд каньон - Добро пожаловать в Седону.">
@@ -72,11 +73,11 @@
 
         <!-- Advantages -->
 
-        <section class="sedona-advantages">
+        <section class="sedona-advantages" data-test="advantages">
           <div class="advantages-header-container">
-            <p class="advantages-header-title"> Седона — небольшой городок в Аризоне, <span>заслуживающий
+            <h2 class="advantages-header-title"> Седона — небольшой городок в Аризоне, <span>заслуживающий
                 большего!</span>
-            </p>
+            </h2>
             <p class="advantages-header-subtitle"> Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           </div>
           <ul class="advantages-list">
@@ -117,7 +118,7 @@
 
         <!-- Promo -->
 
-        <section class="sedona-promo">
+        <section class="sedona-promo" data-test="service">
           <div class="promo-header-container">
             <h2 class="promo-header">Приезжайте в седону отдохнуть
               <span>в комфорте и уюте!</span>
@@ -142,30 +143,30 @@
 
         <!-- Hotel-search -->
 
-        <section class="hotel-search">
+        <section class="hotel-search" data-test="search">
           <h2 class="hotel-search-header"> Заинтересовались</h2>
           <p class="hotel-search-description">Укажите предполагаемые даты поездки,
             <span> и мы покажем вам лучшие
               предложения гостиниц в Седоне</span>
           </p>
-          <button class="button search-button" type="button">Поиск гостиницы в Седоне</button>
+          <button class="button search-button" type="button" aria-label="Кнопка поиска гостиницы.">Поиск гостиницы в Седоне</button>
         </section>
 
         <!-- Subscribe -->
 
-        <div class="subscribe subsc-index">
+        <div class="subscribe subsc-index" data-test="subscribe">
           <h2 class="subsc-header"> Подпишитесь на рассылку</h2>
           <p class="subsc-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
             <input class="text-input-field" type="email" name="index-email" placeholder="Ваш e-mail" id="index-email-field" required>
-            <button class="button subsc-button" type="submit">Подписаться</button>
+            <button class="button subsc-button" type="submit" aria-label="Подписаться на рассылку.">Подписаться</button>
           </form>
         </div>
       </main>
 
       <!-- Footer -->
 
-      <footer class="main-footer">
+      <footer class="main-footer" data-test="footer">
         <ul class="social">
           <li class="social-item">
             <a class="social-link" href="https://vk.com/htmlacademy">
