--- a/modal.html
+++ b/modal.html
@@ -267,7 +267,7 @@
               </button>
               <input class="persons-number" type="number" id="child-number" value="2" name="child-number" min="1"
                 max="10">
-              <button class="count-plus" type="button">
+              <button class="count-plus count-plus-right" type="button">
                 <svg class="plus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
                   width="14" height="14" fill="#756157" viewBox="0 0 14 14">
                   <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
