Исправления по Pixel Perfect

--- a/index.html
+++ b/index.html
@@ -53,11 +53,9 @@
                 <span class="favourite-hotels">12</span>
               </a>
             </li>
-            <li class="navigation-item">
-              <button class="button wish-button" type="button">Хочу Сюда
-                <span class="visually-hidden">Подать заявку</span>
-              </button>
-            </li>
+            <button class="button wish-button" type="button">Хочу Сюда
+              <span class="visually-hidden">Подать заявку</span>
+            </button>
           </ul>
         </nav>
       </header>
@@ -104,7 +102,7 @@
             </li>
             <li class="advantage-item-near-picture">
               <div class="advantage-item">
-                <h3 class="advantage-item-header near-picture-header">Там есть мост дьявола</h3>
+                <h3 class="advantage-item-header near-picture-header">Там есть<br> мост дьявола</h3>
                 <p class="advantage-item-description near-picture-description">Да, по нему можно пройти! Если вы
                   осмелитесь,
                   разумеется</p>
@@ -123,20 +121,20 @@
             <h2 class="promo-header">Приезжайте в седону отдохнуть
               <span>в комфорте и уюте!</span>
             </h2>
-            <p class="subtitle">Опытный персонал и качественное обслуживание!</p>
+            <p class="promo-subtitle">Опытный персонал и качественное обслуживание!</p>
           </div>
           <ul class="promo-list">
             <li class="promo-item side-block">
               <h3 class="promo-item-header house-img">Жильё</h3>
-              <p class="promo-item-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              <p class="promo-item-description">Рекомендуем пожить в&nbsp;настоящем мотеле, все&nbsp;как&nbsp;в кино!</p>
             </li>
             <li class="promo-item active">
               <h3 class="promo-item-header food-img">Еда</h3>
-              <p class="promo-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              <p class="promo-item-description">Всегда заказывайте <br>топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="promo-item side-block">
               <h3 class="promo-item-header souvenirs-img">Сувениры</h3>
-              <p class="promo-item-description">Не только китайского, но и настоящего местного производства!</p>
+              <p class="promo-item-description">Не только китайского,<br> но и настоящего местного производства!</p>
             </li>
           </ul>
         </section>
@@ -144,7 +142,7 @@
         <!-- Hotel-search -->
 
         <section class="hotel-search" data-test="search">
-          <h2 class="hotel-search-header"> Заинтересовались</h2>
+          <h2 class="hotel-search-header"> Заинтересовались?</h2>
           <p class="hotel-search-description">Укажите предполагаемые даты поездки,
             <span> и мы покажем вам лучшие
               предложения гостиниц в Седоне</span>
@@ -201,7 +199,7 @@
           </li>
         </ul>
         <div class="contact-phone">
-          <a class="phone" href="tel:+78128121212"> +7(812)812-12-12 </a>
+          <a class="phone" href="tel:+78128121212"> +7 (812) 812-12-12 </a>
         </div>
         <div class="devlogo-container">
           <a class="devlogo" href="https://htmlacademy.ru/">
