--- a/catalog.html
+++ b/catalog.html
@@ -53,11 +53,9 @@
                 <span class="favourite-hotels">12</span>
               </a>
             </li>
-            <li class="navigation-item">
-              <button class="button wish-button" type="button">Хочу Сюда
-                <span class="visually-hidden">Подать заявку</span>
-              </button>
-            </li>
+            <button class="button wish-button" type="button">Хочу Сюда
+              <span class="visually-hidden">Подать заявку</span>
+            </button>
           </ul>
         </nav>
       </header>
@@ -65,7 +63,7 @@
 
         <!-- Breadcrumsb -->
 
-        <section class="hotel-selection" data-test="filter">
+        <section class="hotel-selection">
           <h1 class="hotel-selection-header">Гостиницы Седоны</h1>
           <ol class="breadcrumbs">
             <li class="breadcrumbs-item">
@@ -80,7 +78,7 @@
 
           <!-- Filter -->
 
-          <form class="filter-container" action="https://echo.htmlacademy.ru/" method="get">
+          <form class="filter-container" action="https://echo.htmlacademy.ru/" method="get" data-test="filter">
             <fieldset class="filter ">
               <legend class="filter-header">Инфраструктура:</legend>
               <label class="filter-item">
@@ -145,7 +143,7 @@
 
         <section class="results" data-test="catalog">
           <header class="controls">
-            <h2 class="search-result">найдено гостиниц:38</h2>
+            <h2 class="search-result">найдено гостиниц: 38</h2>
             <select class="select-control" aria-label="Сортировка.">
               <option value="popular">Сначала популярное</option>
               <option value="cheap" selected>Сначала дешёвое</option>
@@ -177,13 +175,13 @@
               </a>
               <h4 class="hotel-name">Amara Resort & Spa</h4>
               <span class="hotel-price hotel-price-name">Гостиница</span>
-              <span class="hotel-price hotel-price-value">от 4000 ₽</span>
+              <span class="hotel-price hotel-price-value">Oт 4000 ₽</span>
               <button class="button detail-button" type="button"
                 aria-label="Узнать подробнее об отеле.">Подробнее</button>
               <button class="button favorite-button" type="button" aria-label="Добавить в избранное.">В
                 избранное</button>
               <span class="hotel-stars four-hotel-stars"><span class="visually-hidden">Звездность отеля.</span></span>
-              <span class="rating-value">рейтинг 8,5</span>
+              <span class="rating-value">рейтинг: 8,5</span>
             </li>
             <li class="hotel-list-item">
               <a class="hotel-link" href="#">
@@ -191,14 +189,14 @@
                   alt="Горный хребет на фоне неба и радуги.">
               </a>
               <h4 class="hotel-name">Villas at Poco Diablo</h4>
-              <span class="hotel-price-name">Гостиница</span>
-              <span class="hotel-price-value">От 5000 ₽</span>
+              <span class="hotel-price hotel-price-name">Гостиница</span>
+              <span class="hotel-price hotel-price-value">От 5000 ₽</span>
               <button class="button detail-button" type="button"
                 aria-label="Узнать подробнее об отеле.">Подробнее</button>
               <button class="button favorite-button added" type="button" aria-label="Добавить в избранное.">В
                 избранное</button>
               <span class="hotel-stars four-hotel-stars"><span class="visually-hidden">Звездность отеля.</span></span>
-              <span class="rating-value">рейтинг 9,2</span>
+              <span class="rating-value">рейтинг: 9,2</span>
             </li>
             <li class="hotel-list-item">
               <a class="hotel-link" href="#">
@@ -206,8 +204,8 @@
                   alt="Гора в окружении зеленой растительности.">
               </a>
               <h4 class="hotel-name">Desert Quail Inn</h4>
-              <span class="hotel-price-name">Гостиница</span>
-              <span class="hotel-price-value">От 2500 ₽</span>
+              <span class="hotel-price hotel-price-name">Гостиница</span>
+              <span class="hotel-price hotel-price-value">От 2500 ₽</span>
               <button class="button detail-button" type="button"
                 aria-label="Узнать подробнее об отеле.">Подробнее</button>
               <button class="button favorite-button" type="button" aria-label="Добавить в избранное.">В
@@ -215,7 +213,7 @@
               <span class="hotel-stars three-hotel-stars">
                 <span class="visually-hidden">Звездность отеля.</span>
               </span>
-              <span class="rating-value">рейтинг 6,9</span>
+              <span class="rating-value">рейтинг: 6,9</span>
             </li>
             <li class="hotel-list-item">
               <a class="hotel-link" href="#">
@@ -223,15 +221,15 @@
                   alt="Одинокая гора на фоне звездного неба.">
               </a>
               <h4 class="hotel-name">GreenTree Inn</h4>
-              <span class="hotel-price-name">Гостиница</span>
-              <span class="hotel-price-value">От 1500 ₽</span>
+              <span class="hotel-price hotel-price-name">Гостиница</span>
+              <span class="hotel-price hotel-price-value">От 1500 ₽</span>
               <button class="button detail-button" type="button"
                 aria-label="Узнать подробнее об отеле.">Подробнее</button>
               <button class="button favorite-button" type="button" aria-label="Добавить в избранное.">В
                 избранное</button>
               <span class="hotel-stars two-hotel-stars"><span class="visually-hidden">Звездность отеля.</span>
               </span>
-              <span class="rating-value">рейтинг 5,0</span>
+              <span class="rating-value">рейтинг: 5,0</span>
             </li>
           </ul>
 
@@ -311,7 +309,7 @@
           </li>
         </ul>
         <div class="contact-phone">
-          <a class="phone" href="tel:+78128121212"> +7(812)812-12-12 </a>
+          <a class="phone" href="tel:+78128121212"> +7 (812) 812-12-12 </a>
         </div>
         <div class="devlogo-container">
           <a class="devlogo" href="https://htmlacademy.ru/">
