Чистка проекта для защиты

--- a/modal.html
+++ b/modal.html
@@ -211,8 +211,8 @@
           </a>
         </div>
       </footer>
-      <section class="modal-container" data-test="modal">
-        <div class="modal-window">
+      <section class="modal-container">
+        <div class="modal-window" data-test="modal">
           <h2 class="modal-header">Поиск гостиницы в Седоне</h2>
           <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
             <button class="modal-close-button" type="button"></button>
@@ -237,8 +237,8 @@
                 </svg>
                 <span class="visually-hidden">Кнопка уменьшения колличества детей</span>
               </button>
-              <input class="persons-number" type="number" id="adult-number" value="2" name="child-number" min="1"
-                max="10">
+              <input class="persons-number" type="number" id="adult-number" value="2" name="adult-number" min="1"
+                max="9">
               <button class="count-plus" type="button">
                 <svg class="plus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
                   width="14" height="14" fill="#756157" viewBox="0 0 14 14">
@@ -259,8 +259,8 @@
                 </svg>
                 <span class="visually-hidden">Кнопка уменьшения колличества детей</span>
               </button>
-              <input class="persons-number" type="number" id="child-number" value="2" name="child-number" min="1"
-                max="10">
+              <input class="persons-number" type="number" id="child-number" value="2" name="child-number" min="0"
+                max="9">
               <button class="count-plus count-plus-right" type="button">
                 <svg class="plus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
                   width="14" height="14" fill="#756157" viewBox="0 0 14 14">
