--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,7 @@
           </ul>
           <ul class="user-menu nav-buttons">
             <li class="navigation-item-button">
-              <a class="navigation-link-search" href="#">
+              <a class="navigation-link-icon navigation-link-search" href="#">
                 <svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" width="19"
                   height="19" fill="none">
                   <path fill="#000"
@@ -43,7 +43,7 @@
               </a>
             </li>
             <li class="navigation-item-button">
-              <a class="navigation-link-favourite" href="#">
+              <a class="navigation-link-icon navigation-link-favourite" href="#">
                 <svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" width="18"
                   height="17" fill="none">
                   <path fill="#000"
@@ -53,10 +53,10 @@
                 <span class="favourite-hotels">12</span>
               </a>
             </li>
-            <button class="button wish-button" type="button">Хочу Сюда
-              <span class="visually-hidden">Подать заявку</span>
-            </button>
           </ul>
+          <button class="button wish-button" type="button">Хочу Сюда!
+            <span class="visually-hidden">Подать заявку</span>
+          </button>
         </nav>
       </header>
       <main class="main" data-test="main">
@@ -106,7 +106,7 @@
               </label>
             </fieldset>
             <fieldset class="filter filter-price">
-              <legend class="filter-header">Стоимость,<span> ₽</span></legend>
+              <legend class="filter-header">Стоимость,<span> ₽:</span></legend>
               <div class="range-container">
                 <div class="filter-price-container">
                   <label class="filter-item">
@@ -146,7 +146,7 @@
             <h2 class="search-result">найдено гостиниц: 38</h2>
             <select class="select-control" aria-label="Сортировка.">
               <option value="popular">Сначала популярное</option>
-              <option value="cheap" selected>Сначала дешёвое</option>
+              <option value="cheap" selected>Сначала дешевые</option>
             </select>
             <ul class="card-view-buttons">
               <li class="card-view-item">
