--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
               <a class="navigation-link" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
-          <ul class="navigation-list nav-buttons">
+          <ul class="user-menu nav-buttons">
             <li class="navigation-item-button">
-              <a class="navigation-link-search" href="#">
-                <svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
-                  fill="none">
+              <a class="navigation-link-icon navigation-link-search" href="#">
+                <svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" width="19"
+                  height="19" fill="none">
                   <path fill="#000"
                     d="m18.5 17-3.7-3.7a8 8 0 0 0 1.7-4.8 8 8 0 0 0-8-8 8 8 0 0 0-8 8 8 8 0 0 0 12.9 6.3l3.7 3.7 1.4-1.5Zm-10-2.5a6 6 0 0 1-6-6 6 6 0 0 1 12 0 6 6 0 0 1-6 6Z" />
                 </svg>
@@ -43,9 +43,9 @@
               </a>
             </li>
             <li class="navigation-item-button">
-              <a class="navigation-link-favourite" href="#">
-                <svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" width="18" height="17"
-                  fill="none">
+              <a class="navigation-link-icon navigation-link-favourite" href="#">
+                <svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg" width="18"
+                  height="17" fill="none">
                   <path fill="#000"
                     d="M8.9 17a.9.9 0 0 1-.8-.4l-7-7.9A5.4 5.4 0 0 1 5.5 0C6.8 0 8 .5 9 1.3a5.5 5.5 0 0 1 9 4.1c0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5L9 14.4l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4a3.7 3.7 0 0 0-2.7-1.3 3.3 3.3 0 0 0-3.3 3.3c-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z" />
                 </svg>
@@ -53,10 +53,10 @@
                 <span class="favourite-hotels">12</span>
               </a>
             </li>
-            <button class="button wish-button" type="button">Хочу Сюда
-              <span class="visually-hidden">Подать заявку</span>
-            </button>
           </ul>
+          <button class="button wish-button" type="button">Хочу Сюда!
+            <span class="visually-hidden">Подать заявку</span>
+          </button>
         </nav>
       </header>
       <main class="main" data-test="main">
@@ -88,15 +88,15 @@
               </div>
                 <img class="advantage-image" src="images/features/photo1.jpg" width="800" height="385" alt="Пейзаж города Седоны." >
             </li>
-            <li class="advantage-item advantage-corner-block">
+            <li class="advantage-item-middle advantage-corner-block">
               <h3 class="advantage-item-header header-underline">Небольшая площадь</h3>
               <p class="advantage-item-description">Все достопримечательности находятся очень близко</p>
             </li>
-            <li class="advantage-item advantage-middle-block">
+            <li class="advantage-item-middle advantage-middle-block">
               <h3 class="advantage-item-header header-underline">Красивая <br> дорога</h3>
               <p class="advantage-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
-            <li class="advantage-item advantage-corner-block">
+            <li class="advantage-item-middle advantage-corner-block">
               <h3 class="advantage-item-header header-underline">Мало <br> туристов</h3>
               <p class="advantage-item-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
@@ -118,9 +118,7 @@
 
         <section class="sedona-promo" data-test="service">
           <div class="promo-header-container">
-            <h2 class="promo-header">Приезжайте в седону отдохнуть
-              <span>в комфорте и уюте!</span>
-            </h2>
+            <h2 class="promo-header">Приезжайте в седону отдохнуть в&nbsp;комфорте&nbsp;и&nbsp;уюте!</h2>
             <p class="promo-subtitle">Опытный персонал и качественное обслуживание!</p>
           </div>
           <ul class="promo-list">
