Исправление кода CSS

--- a/catalog.html
+++ b/catalog.html
@@ -194,7 +194,7 @@
               <button class="button detail-button" type="button"
                 aria-label="Узнать подробнее об отеле.">Подробнее</button>
               <button class="button favorite-button added" type="button" aria-label="Добавить в избранное.">В
-                избранное</button>
+                избранном</button>
               <span class="hotel-stars four-hotel-stars"><span class="visually-hidden">Звездность отеля.</span></span>
               <span class="rating-value">рейтинг: 9,2</span>
             </li>
