исправление названий картинок

--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
       <header class="main-header" data-test="header">
         <nav class="navigation">
           <a class="navigation-logo" href="index.html">
-            <img class="logo-img" src="images/sedonalogo.svg" width="140" height="70" alt="Логотип сайта Седона.">
+            <img class="logo-img" src="images/sedona_logo.svg" width="140" height="70" alt="Логотип сайта Седона.">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
