--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header class="main-header" data-test="header">
         <nav class="navigation">
           <a class="navigation-logo">
-            <img src="images/sedona_logo.svg" width="140" height="70" alt="Логотип сайта Седона." >
+            <img src="images/sedonalogo.svg" width="140" height="70" alt="Логотип сайта Седона." >
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -65,7 +65,7 @@
 
         <section class="hero" data-test="hero">
           <h1 class="visually-hidden"> Добро пожаловать в Седону</h1>
-          <img class="background-img" src="images/welcome_text.svg"
+          <img class="background-img" src="images/welcometext.svg"
             width="458" height="352" alt="Надоел Гранд каньон - Добро пожаловать в Седону.">
         </section>
 
