--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <h2 class="modal-header">Поиск гостиницы в Седоне</h2>
           <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
             <button class="modal-close-button" type="button">
-              <svg class="modal-close-icon" aria-hidden="true" focusable="true" xmlns="http://www.w3.org/2000/svg"
+              <svg class="modal-close-icon" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
                 width="15" height="15" fill="none" viewBox="0 0 15 15">
                 <path fill="#000"
                   d="M14.5 1.8 13.2.5 7.5 6.2 1.8.5.5 1.8l5.7 5.7-5.7 5.7 1.3 1.3 5.7-5.7 5.7 5.7 1.3-1.3-5.7-5.7 5.7-5.7Z" />
